--- a/modules/ROOT/partials/configuration/revisionhistory_css_url.adoc
+++ b/modules/ROOT/partials/configuration/revisionhistory_css_url.adoc
@@ -4,7 +4,7 @@
 This option sets the location where a CSS file containing the styles for change annotations should be loaded from. It can be used along with `+revisionhistory_diff_classes+` to override the default CSS classes.
 
 [NOTE]
-Ensure that the file includes all CSS classes expected by xref:revisionhistory_diff_classes[`+revisionhistory_diff_classes+`]
+Ensure that the file includes all CSS classes expected by xref:revisionhistory_diff_classes[`+revisionhistory_diff_classes+`].
 
 *Type:* `+String+`
 
