--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -174,7 +174,7 @@ Options not available in **Advanced Template** plugin
 * `template_selected_content_classes`
 
 
-[[ui-and-ux-elements-and-components]]
+[[ui-and-ux]]
 == UI and UX
 
 === Improved
