DOC-2284: Add new documentation for `Revision History` Plugin. (#3071)
* added initial outline for new revisionhistory plugin

* revisionhistory plugin demo

* added revision-history icon to icon list

* added commands for revisionhistory plugin

* added initial outline of configuration options for revisionhistory plugin

* added events for revisionhistory plugin

* added revisionhistory plugin entries to nav.adoc and premium-plugins.adoc

* added docs for ToggleView command in query command values

* added menubar button docs for revisionhistory plugin

* added toolbar button docs for revisionhistory plugin

* improvements to revisionhistory.adoc

* improvements to revisionhistory configuration options

* updated the sample revisions in plugin demo

* added admonition about inline mode not supported

* TINY-10363 added note about how the plugin treats commented HTML in the editor

* DOC-2284: Update revision history doc template

* fix typo in demo

* add revisionhistory to `defaultmenuitems.adoc` under `View` menu

* DOC-2284: More changes

* DOC-2248: Update options

* DOC-2248: Update demos

* Update modules/ROOT/pages/revisionhistory.adoc

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

* Update modules/ROOT/partials/configuration/revisionhistory_diff_classes.adoc

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

* Update modules/ROOT/partials/events/revisionhistory-events.adoc

* Update modules/ROOT/partials/configuration/revisionhistory_fetch.adoc

* Update modules/ROOT/partials/configuration/revisionhistory_fetch.adoc

* Update modules/ROOT/partials/configuration/revisionhistory_css_url.adoc

* Update modules/ROOT/pages/revisionhistory.adoc

* Update modules/ROOT/pages/revisionhistory.adoc

* Update modules/ROOT/pages/revisionhistory.adoc

* Update modules/ROOT/pages/revisionhistory.adoc

* Update modules/ROOT/pages/revisionhistory.adoc

* Upd

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -324,6 +324,7 @@
 **** xref:powerpaste-commands-events-apis.adoc[Commands and Events]
 **** xref:powerpaste-support.adoc[Supported functionality]
 **** xref:powerpaste-troubleshooting.adoc[Troubleshooting]
+*** xref:revisionhistory.adoc[Revision History]
 *** Spell Checker
 **** xref:introduction-to-tiny-spellchecker.adoc[Spell Checker]
 **** xref:custom-dictionaries-for-tiny-spellchecker.adoc[Adding custom dictionaries]
