--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -185,6 +185,11 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 :plugincode: preview
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
+:plugincategory: premium
+:pluginname: Revision History
+:plugincode: revisionhistory
+include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
+
 :plugincategory: opensource
 :pluginname: Search and Replace
 :plugincode: searchreplace
