--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -149,6 +149,12 @@ Copy and paste content from Microsoft Word, Microsoft Excel, Google Docs, and HT
 
 a|
 [.lead]
+xref:revisionhistory.adoc[Revision History]
+
+Easily view document changes and restore previous versions.
+
+a|
+[.lead]
 xref:introduction-to-tiny-spellchecker.adoc[Spell Checker]
 
 Check spelling as-you-type in {productname}.
@@ -183,7 +189,7 @@ Cloud-based file and image management for {productname}.
 //    odd.
 // 2. Prepend the inline comment markup to this element
 //    when the number of cells in the table is even.
-a|
+// a|
 
 |===
 
