--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -212,6 +212,11 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 :plugincode: quickbars
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
+:plugincategory: premium
+:pluginname: Revision History
+:plugincode: revisionhistory
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
 :plugincategory: opensource
 :pluginname: Save
 :plugincode: save
