--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -793,7 +793,7 @@ Now, when using the `mceTablePasteRowAfter` command, `mceTablePasteColAfter` com
 
 This section describes issues that users of {productname} 7.0 may encounter and possible workarounds for these issues.
 
-There are two known issues in {productname} 7.0.
+There are four known issues in {productname} 7.0.
 
 === Non-breaking spaces `+&nbsp;+` may be inadvertently inserted around content during Markdown conversion
 
