--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -10,7 +10,7 @@ Most configuration changes in {productname} 7.0 only affect complex use cases, s
 
 It set outs the {productname} 7.0 changes that customers using {productname} 6 should be aware of as part of upgrading.
 
-NOTE: For support related to migration, please contact https://support.tiny.cloud/hc/en-us/requests/new[Tiny support].  +
+NOTE: For support related to migration, please contact https://support.tiny.cloud/hc/en-us/requests/new[Tiny Support].  +
 Open Source users: please report issues in the https://github.com/tinymce/tinymce/[TinyMCE GitHub Repository].
 
 [[overview]]
