--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -793,8 +793,6 @@ Now, when using the `mceTablePasteRowAfter` command, `mceTablePasteColAfter` com
 
 This section describes issues that users of {productname} 7.0 may encounter and possible workarounds for these issues.
 
-There are four known issues in {productname} 7.0.
-
 === Non-breaking spaces `+&nbsp;+` may be inadvertently inserted around content during Markdown conversion
 
 Currently, Non-breaking spaces `+&nbsp;+` may be inadvertently inserted around content inside `<p>&nbsp;</p>` during Markdown conversion, requiring users to manually remove them post-conversion as the current workaround.
@@ -815,26 +813,23 @@ Currently, Non-breaking spaces `+&nbsp;+` may be inadvertently inserted around c
 === Tab navigation inside the Enhanced Code Editor currently does not function as expected when the host browser is Safari.
 // #TINY-10596
 
-Currently, tab navigation within the Enhanced Code Editor is not working as expected when Safari is the host browser and the editor configuration is set to `advcode_inline: true`, resulting in a loss of tab functionality.
-
-.Example of configuration affected.
-[source, js]
-----
-tinymce.init({
-  selector: 'textarea', // change this value according to your HTML
-  plugins: 'advcode',
-  advcode_inline: true,
-  toolbar: 'code',
-});
-----
+Currently, tab navigation within the Enhanced Code Editor is not working as expected when Safari is the host browser, resulting in a loss of tab functionality.
 
 Currently, there is no workaround for this issue.
 
-=== Revision History
+=== Revision History highlights `table` content with `colgroup` as new.
 
-* `table` elements with `colgroup` are highlighted as new even though there is no change.
-* There is no integration for saving a version yet. For now, a workaround is to add a custom toolbar button. For example:
+TODO//
 
+Currently, there is no workaround for this issue.
+
+=== Revision History has no integration for saving version.
+
+TODO//
+
+For now, a workaround is to add a custom toolbar button.
+
+.Example
 [source,js]
 ----
 const revisions = [];
