--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -819,7 +819,7 @@ Currently, there is no workaround for this issue.
 
 === Revision History highlights `table` content with `colgroup` as new.
 
-TODO//
+When a `table` element has `colgroup` attribute, Revision History highlights it as new even though it has no change.
 
 Currently, there is no workaround for this issue.
 
