--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -823,7 +823,7 @@ When a `table` element has `colgroup` attribute, Revision History highlights it 
 
 Currently, there is no workaround for this issue.
 
-=== Revision History has no integration for saving version.
+=== Revision History has no integration for saving a version.
 
 TODO//
 
