--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -817,7 +817,7 @@ Currently, tab navigation within the Enhanced Code Editor is not working as expe
 
 Currently, there is no workaround for this issue.
 
-=== table that has `colgroup` attribute is highlighted as new in Revision History.
+=== Table that has `colgroup` attribute is highlighted as new in Revision History.
 
 When a `table` element has `colgroup` attribute, Revision History highlights it as new even though it has no change.
 
