DOC-2327: add gotoline shortcut to advcode shortcuts.adoc.

--- a/modules/ROOT/partials/misc/advcode-shortcuts.adoc
+++ b/modules/ROOT/partials/misc/advcode-shortcuts.adoc
@@ -8,6 +8,7 @@ Enhanced Code Editor provides the following shortcuts within the code dialog.
 | Find | Ctrl+F | Command+F
 | Find Next | F3 | F3
 | Find Previous | Shift+F3 | Shift+F3
+| Go to Line | Ctrl+G | Command+G
 | Close Search Panel | Esc | Esc
 | Indent Code | Ctrl+] | Command+]
 | Outdent Code | Ctrl+[ | Command+[
