--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -64,7 +64,7 @@ While the capability still exists for users that have added this option to their
 [[changes-to-text-pattern-defaults-to-trigger-on-space-key-press]]
 ==== Changes to `text-pattern` defaults to trigger on `Space` key press.
 
-Applying basic formats such as headings, lists, bold and italic while typing are considered core functionality for WYSIWYG Editor's. {productname}'s default behavior for applying these format styles was applied on `Enter`, not `Space`.
+Applying basic formats such as headings, lists, bold and italic from typing them out in Markdown syntax is considered a must-have for WYSIWYG Editor's. In previous versions, {productname} would only apply these formats once the user presses the `Enter` key.
 
 {productname} 7 introduces changes to the default behavior for `text-patterns` so that on **Space** key the editor triggers a xref:content-behavior-options.adoc#block-patterns[block patterns] rather than on `Enter` key press.
 
