--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -66,7 +66,7 @@ While the capability still exists for users that have added this option to their
 
 Applying basic formats such as headings, lists, bold and italic from typing them out in Markdown syntax is considered a must-have for WYSIWYG Editor's. In previous versions, {productname} would only apply these formats once the user presses the `Enter` key.
 
-{productname} 7 introduces changes to the default behavior for `text-patterns` so that on **Space** key the editor triggers a xref:content-behavior-options.adoc#block-patterns[block patterns] rather than on `Enter` key press.
+{productname} 7 updates the default behavior of the `text-patterns` option to apply these formats when the user presses the `Space` key.
 
 [NOTE]
 Customers that wish to revert back to the previous default block `text_patterns` execution on `Enter` key pressing will be required to replace the preconfigured text_patterns. Learn more about how you can configure `text_patterns` in the xref:7.0-release-notes.adoc#a-new-trigger-property-for-block-text-pattern-configurations-allowing-pattern-activation-with-either-space-or-enter-keys[7.0 Release notes]
