--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -53,13 +53,10 @@ tinymce.init({
 });
 ----
 
-[[remove-trailing-brs-configuration-property-was-removed-from-our-domparser-api]]
-==== `remove_trailing_brs` configuration property was removed from our `DomParser` API
+[[remove-trailing-brs-property-removal-from-domparser]]
+==== `remove_trailing_brs` property removal from DomParser
 
-The `remove_trailing_brs` configuration property was moved to the serializer.
-
-[TIP]
-While the capability still exists for users that have added this option to their {productname} configuration, it is recommended that customers using our `DomParser` API directly, should migrate to use our `DomSerializer` setting instead.
+The `remove_trailing_brs` setting was removed from the xref:apis/tinymce.html.domparser.adoc[`DomParser` API], after being deprecated in link:https://www.tiny.cloud/docs/tinymce/6/6.5.1-release-notes/#inserting-two-tables-consecutively-without-focus-in-the-editor-resulted-in-the-second-table-being-inserted-at-the-wrong-position[{productname} 6.5]. 
 
 [[changes-to-text-pattern-defaults-to-trigger-on-space-key-press]]
 ==== Changes to `text-pattern` defaults to trigger on `Space` key press.
